--- a/index.html
+++ b/index.html
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0;url=https://bento.me/idcxxxx1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Social Links</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f4f4f9;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      margin-bottom: 30px;
+    }
+    .link-container {
+      display: inline-block;
+      text-align: left;
+    }
+    .link {
+      display: flex;
+      align-items: center;
+      margin: 10px 0;
+      text-decoration: none;
+      color: #333;
+      font-size: 18px;
+    }
+    .link img {
+      width: 24px;
+      height: 24px;
+      margin-right: 10px;
+    }
+    .link:hover {
+      color: #0073e6;
+    }
+  </style>
 </head>
 <body>
-    <p>Redirecting...</p>
+  <h1>My Social Links</h1>
+  <div class="link-container">
+    <a href="https://www.tiktok.com/@idcxxxx1?_t=ZN-8tKhbhZfpvq&_r=1" class="link" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/TikTok_logo.svg" alt="TikTok">
+      TikTok
+    </a>
+    <a href="https://steamcommunity.com/id/idcxxxx1/" class="link" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="Steam">
+      Steam
+    </a>
+    <a href="https://discord.com/users/967539270564872343" class="link" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg" alt="Discord">
+      Discord
+    </a>
+  </div>
 </body>
 </html>
