--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     body {
       font-family: Arial, sans-serif;
       text-align: center;
-      background-color: #f0f8ff; /* Light blue tint */
-      color: #333;
+      background: linear-gradient(135deg, #0f172a, #1e3a8a); /* Black-blue gradient */
+      color: #f0f0f0;
       margin: 0;
       padding: 20px;
     }
 
     h1 {
       margin-bottom: 30px;
-      color: #628cc7;
+      color: #93c5fd; /* Soft blue */
     }
 
     .link-container {
@@ -32,26 +32,27 @@
       text-decoration: none;
       font-size: 18px;
       font-weight: bold;
-      color: white;
-      background-color: #628cc7;
+      color: #ffffff;
+      background-color: #2563eb; /* Blue */
       border: none;
       border-radius: 8px;
       padding: 12px 20px;
-      width: 220px;
+      width: 240px;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     }
 
     .link:hover {
-      background-color: #0056b3;
+      background-color: #1d4ed8; /* Darker blue */
       transform: translateY(-2px);
-      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
     }
 
     .icon {
-      width: 24px;
-      height: 24px;
+      width: 28px;
+      height: 28px;
       margin-right: 10px;
+      border-radius: 50%; /* Optional: Makes circular icons */
     }
   </style>
 </head>
@@ -59,15 +60,15 @@
   <h1>My Social Links</h1>
   <div class="link-container">
     <a class="link" href="https://www.tiktok.com/@idcxxxx1?_t=ZN-8tKhbhZfpvq&_r=1" target="_blank">
-      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/8/87/TikTok_logo.svg" alt="TikTok Icon">
+      <img class="icon" src="https://www.citypng.com/public/uploads/preview/tik-tok-logo-icon-701751694793267gxetcvvp3v.png" alt="TikTok Icon">
       TikTok
     </a>
     <a class="link" href="https://steamcommunity.com/id/idcxxxx1/" target="_blank">
-      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/732/732221.png" alt="Steam Icon">
+      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="Steam Icon">
       Steam
     </a>
     <a class="link" href="https://discord.com/users/967539270564872343" target="_blank">
-      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/98/Discord_logo.svg" alt="Discord Icon">
+      <img class="icon" src="https://banner2.cleanpng.com/20190602/okw/kisspng-discord-computer-icons-logo-portable-network-graph-discord-logo-16-x16-png-clipart-download-1713889452511.webp" alt="Discord Icon">
       Discord
     </a>
   </div>
