--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <h1>My Social Links</h1>
   <div class="link-container">
     <a class="link" href="https://www.tiktok.com/@idcxxxx1?_t=ZN-8tKhbhZfpvq&_r=1" target="_blank">
-      <img class="icon" src="https://www.citypng.com/public/uploads/preview/tik-tok-logo-icon-701751694793267gxetcvvp3v.png" alt="TikTok Icon">
+      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Ionicons_logo-tiktok.svg" alt="TikTok Icon">
       TikTok
     </a>
     <a class="link" href="https://steamcommunity.com/id/idcxxxx1/" target="_blank">
@@ -68,7 +68,7 @@
       Steam
     </a>
     <a class="link" href="https://discord.com/users/967539270564872343" target="_blank">
-      <img class="icon" src="https://banner2.cleanpng.com/20190602/okw/kisspng-discord-computer-icons-logo-portable-network-graph-discord-logo-16-x16-png-clipart-download-1713889452511.webp" alt="Discord Icon">
+      <img class="icon" src="https://upload.wikimedia.org/wikipedia/fr/4/4f/Discord_Logo_sans_texte.svg" alt="Discord Icon">
       Discord
     </a>
   </div>
