--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     h1 {
       margin-bottom: 30px;
       color: #93c5fd; /* Soft blue */
+      font-size: 36px; /* Larger title text */
     }
 
     .link-container {
@@ -28,30 +29,30 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 15px 0;
+      margin: 20px 0;
       text-decoration: none;
-      font-size: 18px;
+      font-size: 22px; /* Larger text */
       font-weight: bold;
       color: #ffffff;
       background-color: #2563eb; /* Blue */
       border: none;
-      border-radius: 8px;
-      padding: 12px 20px;
-      width: 240px;
+      border-radius: 10px;
+      padding: 16px 30px; /* Increased padding for larger buttons */
+      width: 300px; /* Wider buttons */
       transition: all 0.3s ease;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
     }
 
     .link:hover {
       background-color: #1d4ed8; /* Darker blue */
       transform: translateY(-2px);
-      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 8px 10px rgba(0, 0, 0, 0.3);
     }
 
     .icon {
-      width: 28px;
-      height: 28px;
-      margin-right: 10px;
+      width: 36px; /* Larger icons */
+      height: 36px;
+      margin-right: 15px;
       border-radius: 50%; /* Optional: Makes circular icons */
     }
   </style>
@@ -68,7 +69,7 @@
       Steam
     </a>
     <a class="link" href="https://discord.com/users/967539270564872343" target="_blank">
-      <img class="icon" src="https://upload.wikimedia.org/wikipedia/fr/4/4f/Discord_Logo_sans_texte.svg" alt="Discord Icon">
+      <img class="icon" src="https://upload.wikimedia.org/wikipedia/fr/8/80/Logo_Discord_2015.png" alt="Discord Icon">
       Discord
     </a>
   </div>
