--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       Steam
     </a>
     <a class="link" href="https://discord.com/users/967539270564872343" target="_blank">
-      <img class="icon" src="https://upload.wikimedia.org/wikipedia/fr/8/80/Logo_Discord_2015.png" alt="Discord Icon">
+      <img class="icon" src="https://e7.pngegg.com/pngimages/842/992/png-clipart-discord-computer-servers-teamspeak-discord-icon-video-game-smiley-thumbnail.png" alt="Discord Icon">
       Discord
     </a>
   </div>
